--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 
+DATABASE_URL=sqlite:///contacts.db
+TWILIO_ACCOUNT_SID=your_account_sid
+TWILIO_AUTH_TOKEN=your_auth_token
+TWILIO_PHONE_NUMBER=your_twilio_number
+NOTIFICATION_PHONE=your_phone_number
