--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 click==7.1.2
-Flask==1.1.2
+flask==3.0.2
+flask-sqlalchemy==3.1.1
+twilio==8.13.0
+python-dotenv==1.0.1
+flask-cors==4.0.0
+werkzeug==3.0.1
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
